Node wrangler hotkey crashes 2.83alpha #74776

Closed
opened 2020-03-15 12:23:51 +01:00 by Espen Storø · 17 comments

System Information
Operating system: Windows-8.1-6.3.9600-SP0 64 Bits
Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35

Blender Version
Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-12 00:33, hash: 8751af6d19
Worked: 2.82

With node wrangler turned on, pressing CTRL+T to add image texture nodes makes Blender close when in Cycles render view. This does not happen in 2.81 or 2.82.

Exact steps for others to reproduce the error
Add Cube.
Switch to shading tab.
Switch to Cycles render view.
Add new material.
Press Ctrl+T.
Blender closes every time.

Try pressing Ctrl+t in the attached file.

Crash.blend

info from duplicate task:
On default cube, Switch to the Rendered Viewport Shading.
Switch to Cycles render engine.
Add Environment Texture to Color in World Properties (or to Background Color in Shader Editor <- untested )
Crash.
Crash txt: blender.crash.txt

**System Information** Operating system: Windows-8.1-6.3.9600-SP0 64 Bits Graphics card: GeForce GT 630/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 391.35 **Blender Version** Broken: version: 2.83 (sub 8), branch: master, commit date: 2020-03-12 00:33, hash: `8751af6d19` Worked: 2.82 With node wrangler turned on, pressing CTRL+T to add image texture nodes makes Blender close when in Cycles render view. This does not happen in 2.81 or 2.82. **Exact steps for others to reproduce the error** Add Cube. Switch to shading tab. Switch to Cycles render view. Add new material. Press Ctrl+T. Blender closes every time. Try pressing Ctrl+t in the attached file. [Crash.blend](https://archive.blender.org/developer/F8407290/Crash.blend) info from duplicate task: On default cube, Switch to the Rendered Viewport Shading. Switch to Cycles render engine. Add Environment Texture to Color in World Properties (or to Background Color in Shader Editor <- untested ) Crash. Crash txt: [blender.crash.txt](https://archive.blender.org/developer/F8409468/blender.crash.txt)
Author

Added subscriber: @EspenStoro

Added subscriber: @EspenStoro

#74803 was marked as duplicate of this issue

#74803 was marked as duplicate of this issue

#74719 was marked as duplicate of this issue

#74719 was marked as duplicate of this issue
Member

Added subscribers: @sujith_ta, @ankitm

Added subscribers: @sujith_ta, @ankitm
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I cannot reproduce this issue using 2.83 (sub 9), branch: master, commit date: 2020-03-15 15:11, hash: 8022fc3220

Please try using the latest daily build to see if the issue is solved.


Edit: My mistake, I wasn't in rendered view.

~~I cannot reproduce this issue using 2.83 (sub 9), branch: master, commit date: 2020-03-15 15:11, hash: 8022fc3220~~ ~~Please try using the latest daily build to see if the issue is solved.~~ --- Edit: My mistake, I wasn't in rendered view.
Member

Added subscriber: @dearzhen

Added subscriber: @dearzhen
Member

#74803 has reliable steps though @EAW. in the expanded selection menu of "color" in world properties, clicking environment texture crashes. Testing in 868573451f now.

#74803 has reliable steps though @EAW. in the expanded selection menu of "color" in world properties, clicking environment texture crashes. Testing in 868573451f now.
Member

This comment was removed by @ankitm

*This comment was removed by @ankitm*
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

f01bc597a8 is the first bad commit
cc @brecht
https://pastebin.com/hR9FWRkz
Also, is this pink color expected on default settings? Screenshot 2020-03-16 at 18.54.38.png

f01bc597a8 is the first bad commit cc @brecht https://pastebin.com/hR9FWRkz Also, is this pink color expected on default settings? ![Screenshot 2020-03-16 at 18.54.38.png](https://archive.blender.org/developer/F8409912/Screenshot_2020-03-16_at_18.54.38.png)

This issue was referenced by blender/cycles@bac1765fa8

This issue was referenced by blender/cycles@bac1765fa80eca63afb45b5a86b2927f6978265d

This issue was referenced by 215e474a99

This issue was referenced by 215e474a996c677c323b9e93b8d9dbebb4fbe4b6

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-03-16 16:08:09 +01:00
Member

In #74776#891813, @ankitm wrote:
#74803 has reliable steps though @EAW. in the expanded selection menu of "color" in world properties, clicking environment texture crashes. Testing in 868573451f now.

My mistake, I wasn't in rendered view. Thanks for double checking!

> In #74776#891813, @ankitm wrote: > #74803 has reliable steps though @EAW. in the expanded selection menu of "color" in world properties, clicking environment texture crashes. Testing in 868573451f now. My mistake, I wasn't in rendered view. Thanks for double checking!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74776
No description provided.