Fix T74776: Cycles crash with missing image texture after recent changes